add css no menu de navegação

--- a/desafios/100 desafios/ds26 site de vendas/index.html
+++ b/desafios/100 desafios/ds26 site de vendas/index.html
@@ -70,8 +70,8 @@
 <nav class="container-fluid nav-produtos">
     <section class="container">
         <ul class="nav">
-            <li class="nav-item">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+            <li class="col-md-2 nav-item d-flex align-items-center">
+                <svg xmlns="http://www.w3.org/2000/svg"  fill="currentColor"
                     class="bi bi-list" viewBox="0 0 16 16">
                     <path fill-rule="evenodd"
                         d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5" />
@@ -79,24 +79,24 @@
                 Moda Feminina
                 <ul class="nav flex-column">
                     <li class="nav-item">
-                        Lançamentos
+                        <a href="#">Lançamentos</a>
                     </li>
                     <li class="nav-item">
-                        Plus Size
+                        <a href="#">Plus Size</a>
                     </li>
                     <li class="nav-item">
-                        Moda Praia
+                        <a href="">Moda Praia</a>
                     </li>
                     <li class="nav-item">
-                        Acessórios
+                        <a href="#">Acessórios</a>
                     </li>
                     <li class="nav-item">
-                        Promoção
+                        <a href="#">Promoção</a>
                     </li>
                 </ul>
             </li>
-            <li class="nav-item">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+            <li class="col-md-2 nav-item d-flex align-items-center">
+                <svg xmlns="http://www.w3.org/2000/svg"  fill="currentColor"
                     class="bi bi-list" viewBox="0 0 16 16">
                     <path fill-rule="evenodd"
                         d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5" />
@@ -258,7 +258,7 @@
                 </section>
             </article>
         </section>
-        <div class="row d-flex justify-content-center ">
+        <div class="d-flex justify-content-center ">
             <button type="button" class="btn btn-warning col-md-2">VEJA MAIS</button>
         </div>
     </main>
