ajustando o carrinho de compra

--- a/desafios/100 desafios/ds28/index.html
+++ b/desafios/100 desafios/ds28/index.html
@@ -73,7 +73,8 @@
                     <span>Total</span>
                     <span>R$ --</span>
                 </div>
-                <div class="cart--finalizar">Finalizar a compra</div>
+                <button class="cart--finalizar">Finalizar a compra</button>
+
             </div>
         </div>
     </aside>
